--- a/WalletWasabi.Fluent/Views/StatusIcon/StatusIcon.axaml
+++ b/WalletWasabi.Fluent/Views/StatusIcon/StatusIcon.axaml
@@ -89,18 +89,6 @@
                        TextAlignment="Center" />
           </DockPanel>
 
-          <DockPanel
-            IsVisible="{Binding HealthMonitor.State, Converter={x:Static converters:HealthMonitorStateVisibilityConverter.Instance}, ConverterParameter={x:Static models:HealthMonitorState.IncompatibleIndexer}}">
-            <PathIcon Data="{StaticResource info_regular}"
-                      DockPanel.Dock="Top"
-                      HorizontalAlignment="Center"
-                      Height="30" />
-            <TextBlock DockPanel.Dock="Bottom"
-                       Text="Wasabi is not compatible with the specified indexer. Update or change the index provider."
-                       TextWrapping="Wrap"
-                       TextAlignment="Center" />
-          </DockPanel>
-
           <!-- Status -->
           <StackPanel Spacing="16">
 
@@ -132,13 +120,6 @@
               </StatusItem.Icon>
             </StatusItem>
 
-            <StatusItem Title="Indexer"
-                          IsVisible="{Binding !HealthMonitor.CanUseBitcoinRpc, FallbackValue=True}"
-                          StatusText="{Binding HealthMonitor.IndexerStatus, Converter={x:Static converters:StatusConverters.IndexerStatusToString}}">
-              <StatusItem.Icon>
-                <PathIcon Data="{StaticResource connector_regular}" />
-              </StatusItem.Icon>
-            </StatusItem>
             <StatusItem
               Title="Peers" StatusText="{Binding HealthMonitor.Peers, Mode=OneWay, StringFormat={}{0} connected}">
               <StatusItem.Icon>
@@ -147,8 +128,7 @@
             </StatusItem>
             <StatusItem
               Title="Bitcoin RPC"
-              StatusText="{Binding HealthMonitor.BitcoinRpcStatus, Converter={x:Static converters:StatusConverters.RpcStatusStringConverter}}"
-              IsVisible="{Binding HealthMonitor.CanUseBitcoinRpc}">
+              StatusText="{Binding HealthMonitor.BitcoinRpcStatus, Converter={x:Static converters:StatusConverters.RpcStatusStringConverter}}">
               <StatusItem.Icon>
                 <PathIcon Data="{StaticResource btc_logo}" />
               </StatusItem.Icon>
@@ -232,13 +212,6 @@
       Data="{StaticResource warning_circle}"
       Foreground="Goldenrod"
       VerticalAlignment="Center" HorizontalAlignment="Right"
-      Classes.blink="{Binding $self.IsVisible}" />
-
-    <!--Critical update available-->
-    <PathIcon
-      IsVisible="{Binding HealthMonitor.State, Converter={x:Static converters:HealthMonitorStateVisibilityConverter.Instance}, ConverterParameter={x:Static models:HealthMonitorState.IncompatibleIndexer}}"
-      Data="{StaticResource download_circle}"
-      Foreground="{DynamicResource SystemErrorTextColor}"
       Classes.blink="{Binding $self.IsVisible}" />
 
     <!--Update available-->
